quick padding fix
when site went live. padding on right messed up widgets in sidebar.
just fixed

--- a/wp-content/themes/my-simone/layouts/content-sidebar.css
+++ b/wp-content/themes/my-simone/layouts/content-sidebar.css
@@ -18,7 +18,7 @@ Layout: Content-Sidebar
 .site-content .widget-area {
 	width: 380px;
 	float: right;
-	padding: .3em 4em .3em 4em;
+	padding: .3em 0 .3em 4em;
 	background: #e4e3e2;
 }
 
